# ai-professional-twin

./: .gitignore
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  logging_config.py  main.py
backend/app/models/: chat.py  knowledge.py
backend/app/prompts/: system.py  templates.py
backend/app/rag/: chunker.py  embeddings.py  retriever.py  store.py
backend/app/routers/: chat.py  health.py  knowledge.py
backend/app/services/: github_api.py  llm.py
backend/app/tools/: __init__.py  action_tools.py  github_tools.py  portfolio_tools.py  schemas.py
backend/knowledge/: academics.yaml  career_qa.yaml  certificates.yaml  linkedin.yaml  projects.yaml  skills.yaml
backend/tests/: conftest.py
backend/tests/test_models/: test_knowledge.py
backend/tests/test_prompts/: test_system.py
backend/tests/test_rag/: test_chunker.py  test_embeddings.py  test_retriever.py  test_store.py
backend/tests/test_routers/: test_chat.py  test_health.py  test_knowledge.py
backend/tests/test_services/: test_github_api.py  test_llm.py
backend/tests/test_tools/: test_action_tools.py  test_github_tools.py  test_portfolio_tools.py  test_registry.py
docs/superpowers/plans/: 2026-07-11-ai-professional-twin-v2.md
docs/superpowers/specs/: 2026-07-11-ai-professional-twin-v2-design.md  2026-07-17-ai-professional-twin-v3-design.md
frontend/: package-lock.json  package.json
frontend/src/: app.tsx
frontend/src/hooks/: use-chat.ts  use-projects.ts
v1/: index.html  package.json  vercel.json
v1/api/: index.js
(+20 files in other folders)
