[project]
name = "ai-professional-twin"
version = "0.2.0"
description = "AI Professional Twin - RAG-powered digital professional identity"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "openai>=1.50.0",
    "chromadb>=0.5.0",
    "pypdf>=4.0.0",
    "pyyaml>=6.0.0",
    "structlog>=24.0.0",
    "slowapi>=0.1.9",
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-PyYAML>=6.0.0",
    "types-python-dateutil>=2.9.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["knowledge/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"app/routers/*.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
